добавил метод удаления людей из чата + дока для всех методов
